--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,8 +29,11 @@
               <ul id="lang-list">
                 <li data-value="KOR">KOR</li>
                 <li data-value="ENG">ENG</li>
-                <li data-value="VI">VI</li>
-                <li data-value="CN">CN</li>
+                <li data-value="VNM">VNM</li>
+                <li data-value="CHN">CHN</li>
+                <li data-value="UZB">UZB</li>
+                <li data-value="MNG">MNG</li>
+                <li data-value="IDN">IDN</li>
               </ul>
             </div>
           </div>
@@ -56,6 +59,7 @@
     </div>
   </div>
 
+  <script src="messages.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
