--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
         <div id="header-title">
           한라대학교 GPT<br>
           <span id="powered-by">powered by 
-            <a href="https://github.com/dryflowery" style="color: #00ade6; text-decoration: none;" target="_blank">dryflowery</a>
+            <a href="https://github.com/dryflowery" style="color: #00ade6; text-decoration: none;" target="_blank">Halla Univ. CE</a>
           </span>
         </div> 
 
